@@ -53,8 +53,10 @@ if test ! -f "$RTWEIGHT" ; then
     exit 1
 fi
 
-
-rm -f weight.log .density weight.g weight.ref weight.out weight.mged
+# FIRST TEST =================================
+if [ -f weight.log ] ; then
+  rm -f .density .density0 weight.log weight.g weight.ref weight.out weight.mged
+fi
 
 cat > weight.mged <<EOF
 opendb weight.g y
@@ -111,6 +113,7 @@ Total mass = 7.82943 grams
 
 EOF
 
+# eliminate the time stamps lines which are obviously different
 tr -d ' \t' < weight.ref | grep -v DensityTableUsed | grep -v TimeStamp > weight.ref_ns
 tr -d ' \t' < weight.out | grep -v DensityTableUsed | grep -v TimeStamp > weight.out_ns
 
@@ -118,14 +121,19 @@ cmp weight.ref_ns weight.out_ns
 STATUS=$?
 if [ X$STATUS != X0 ] ; then
     echo "rtweight results differ $STATUS"
+else
+    echo "-> weight.sh succeeded (1 of 2)"
 fi
 
-rm -f weight.out_ns weight.ref_ns
+# SECOND TEST =================================
 
-# Need to do a slightly more elaborate test - for now, commented out
-# because rtweight won't handle the quirky density file
-if [ 1 == 0 ] ; then
-rm -f weight2.log .density weight2.g weight2.ref weight2.out weight2.mged
+# Need to do a slightly more elaborate test
+# save first density file in case we fail here
+mv .density .density0
+
+if [ -f weight2.log ] ; then
+  rm -f weight2.log weight2.g weight2.ref weight2.out weight2.mged
+fi
 
 cat > weight2.mged <<EOF
 opendb weight2.g y
@@ -153,7 +161,8 @@ cat > .density <<EOF
 2    7.82      Carbon Tool Steel
 3    2.7       Aluminum, 6061-T6
 4    2.74      Aluminum, 7079-T6
-5    	       Copper, pure
+#  Incomplete line following
+    	       Copper, pure
 6    19.32     Gold, pure
 7    8.03      Stainless, 18Cr-8Ni
 #  Comment
@@ -165,7 +174,8 @@ cat > .density <<EOF
 10   7.84      Carbon Steel
 12   3.00      Gunner
 14   10.00     Fuel
-
+#  Material ID too high (MAXMTLS = 32768)
+99999 70.84    Kryptonite
 EOF
 
 $RTWEIGHT -a 25 -e 35 -s128 -o weight2.out weight2.g boxes > weight2.log 2>&1
@@ -174,36 +184,49 @@ cat >> weight2.ref <<EOF
 RT Weight Program Output:
 
 Database Title: "Untitled BRL-CAD Database"
-Time Stamp: Day Mon  0 00:00:00 0000
+Time Stamp: Sat Jan 14 09:01:50 2012
 
 
-Density Table Used:/path/to/.density
+Density Table Used:/usr/src/tbrowde/brlcad-build/regress/.density
 
 Material  Density(g/cm^3)  Name
-    1         7.8295       steel
+    2         7.8200       Carbon Tool Steel
+    3         2.7000       Aluminum, 6061-T6
+    4         2.7400       Aluminum, 7079-T6
+    6        19.3200       Gold, pure
+    7         8.0300       Stainless, 18Cr-8Ni
+    8         7.4700       Stainless 27Cr
+    9         7.7150       Steel, tool
+   10         7.8400       Carbon Steel
+   12         3.0000       Gunner
+   14        10.0000       Fuel
 Weight by region (in grams, density given in g/cm^3):
 
   Weight Matl LOS  Material Name  Density Name
  ------- ---- --- --------------- ------- -------------
-   7.829    1 100 steel            7.8295 /box.r
+   7.822    2 100 Carbon Tool Ste  7.8200 /boxes/box1.r
+   8.021    7 100 Stainless, 18Cr  8.0300 /boxes/box2.r
+   3.001   12 100 Gunner           3.0000 /boxes/box3.r
 Weight by item number (in grams):
 
 Item  Weight  Region Names
 ---- -------- --------------------
-1000    7.829 /box.r
+1000    7.822 /boxes/box1.r
+1001    8.021 /boxes/box2.r
+1002    3.001 /boxes/box3.r
 RT Weight Program Output:
 
 Database Title: "Untitled BRL-CAD Database"
-Time Stamp: Day Mon  0 00:00:00 0000
+Time Stamp: Sat Jan 14 09:01:50 2012
 
 
-Total volume = 0.999991 cm^3
+Total volume = 2.99933 cm^3
 
-Centroid: X = 0.5 cm
-          Y = 0.5 cm
-          Z = 0.5 cm
+Centroid: X = 1.98812 cm
+          Y = 1.98833 cm
+          Z = 1.98831 cm
 
-Total mass = 7.82943 grams
+Total mass = 18.8433 grams
 
 EOF
 
@@ -212,19 +235,28 @@ tr -d ' \t' < weight2.out | grep -v DensityTableUsed | grep -v TimeStamp > weigh
 
 cmp weight2.ref_ns weight2.out_ns
 STATUS=$?
+
 if [ X$STATUS != X0 ] ; then
     echo "rtweight results differ $STATUS"
 fi
 
-rm -f weight2.out_ns weight2.ref_ns
-
-fi
 
 if [ X$STATUS = X0 ] ; then
-    echo "-> weight.sh succeeded"
+    echo "-> weight.sh succeeded (2 of 2)"
 else
-    echo "-> weight.sh FAILED"
+    echo "-> weight.sh FAILED (2 of 2)"
 fi
+
+# remove all test products here, but only if all tests pass
+if [ X$STATUS = X0 ] ; then
+    # now remove all generated files
+    rm -f weight.out_ns  weight.ref_ns
+    rm -f weight2.ref_ns weight2.out_ns
+    rm -f .density .density0
+    rm -f weight.log  weight.g  weight.ref  weight.out  weight.mged
+    rm -f weight2.log weight2.g weight2.ref weight2.out weight2.mged
+fi
+
 
 exit $STATUS
 
